Fixed alignment of links and component names

--- a/src/components/app-summary/style.css
+++ b/src/components/app-summary/style.css
@@ -42,7 +42,6 @@
 }
 
 .component-list {
-  padding: 1rem;
   position: relative;
   width: 200px;
 }
@@ -57,7 +56,7 @@
   color: rgb(0, 0, 0);
   right: 3rem;
   padding-left: 1rem;
-  bottom: 1rem;
+  bottom: 0rem;
   opacity: 0;
   transition: opacity 0.3s;
   text-align: center;
